# hcompile-jni

./: README.md  support_requests.json
jni/jni/: ARMHook.h  Android.mk  Application.mk  BRNotification.cpp  BRNotification.h  BitStream.o.d  CAndroidUtils.h  CAudioStream.cpp  CAudioStream.h  CAudioStreamManager.cpp  CAudioStreamManager.h  CChatWindow.cpp  CChatWindow.h  CCheckFileHash.cpp  CClientInfo.cpp  CClientInfo.h  CDebugInfo.cpp  CDebugInfo.h  CDialog.cpp  CEntity.o.d  CFileHashed.cpp  CFileHashed.h  CGameResourcesDecryptor.cpp  CGraphic.cpp  CGraphic.h  CHUD.cpp  CHUD.h  CHooks.cpp  CHooks.h  CJavaWrapper.cpp  CJavaWrapper.h  CKeyboard.cpp  CLoader.cpp  CLoader.h  CLocalisation.cpp  CLocalisation.h  CMakeLists.txt  CNotSA.h  CPlayerPed.o.d  CRegerdsRPC.cpp  (+139 more)
jni/jni/arm/: armhook.cpp  armhook.h  inlinehook.cpp  inlinehook.h  oldARMHook.cpp  oldARMHook.h  patch.cpp  patch.h  util.cpp
jni/jni/blackrussia/: CAdjustableHudColors.cpp  CAdjustableHudColors.h  CAdjustableHudPosition.cpp  CAdjustableHudPosition.h  CAdjustableHudScale.cpp  CAdjustableHudScale.h  CCustomPlateManager.cpp  CCustomPlateManager.h  CExtendedCarColors.cpp  CExtendedCarColors.h  CFirstPersonCamera.cpp  CFirstPersonCamera.h  CHandlingDefault.cpp  CInfoBarText.cpp  CInfoBarText.h  CRadarRect.cpp  CRenderTarget.cpp  CSnow.cpp  CWeaponsOutFit.cpp  Java.cpp  Java.h
jni/jni/br/: CFamily.cpp  CFamily.h  CHUD.cpp  CHUD.h  CLocalisation.cpp  CNetwork.cpp  CSAATextures.txt  CSpeedometr.cpp  CSpeedometr.h
jni/jni/clientlogic/: CBaseModelInfo.h  CFamily.cpp  CFamily.h  CHud.cpp  CHud.h  CModelInfo.cpp  CModelInfo.h  CNetwork.cpp  CNetwork.h  CRQ_Commands.cpp  CRQ_Commands.h  CSkyBox.cpp  CSkyBox.h  ChatMessenger.cpp  TextureDatabaseRuntime.h
jni/jni/cpp/: CMakeLists.txt
jni/jni/cryptors/: AUTOMOBILE_COLLISION_result.cpp  CHECK_HASH1_result.cpp  CHECK_HASH2_result.cpp  COMPONENT_VISIBLE_INTERNAL_result.cpp  DUMPLIBRARIES_result.cpp  FIRST_PROTECT_result.cpp  GAME_INTEGRITY1_result.cpp  GAME_INTEGRITY2_result.cpp  GAME_RESOURCES1_result.cpp  GAME_RESOURCES2_result.cpp  GAME_RESOURCES3_result.cpp  GAME_RESOURCES4_result.cpp  GAME_RESOURCES5_result.cpp  GAME_RESOURCES6_result.cpp  HANDLING_DATA_result.cpp  INITSAMP_result.cpp  INSTALLHOOKS_result.cpp  ISPMHERE_result.cpp  MODELINFO_EDITABLE_result.cpp  RESET_AFTER_RENDER_result.cpp  SERVER_CHECK1_result.cpp  SERVER_CHECK2_result.cpp  SERVER_CHECK3_result.cpp  TEARAK_result.cpp  TINY_ENCRYPT_result.cpp  XTEA3_result.cpp
jni/jni/customrender/: ES2VertexBuffer.cpp  ES2VertexBuffer.h  RQShader.cpp  RQShader.h  RQVertexBuffer.h
jni/jni/familysystem/: ActionWithString.java  ActionWithStringKt.java  CustomEditText.java  FamilyConstants.java  FamilyTypeAliasKt.java  FamilyUtilsKt.java  GUIFamilySystem$initFamilySystemListFromJson$1.java  GUIFamilySystem$special$$inlined$activityViewModels$default$3.java  GUIFamilySystem.java  GetDataFromJsonAndTransformationToCorrectType.java  LogicForDialogApply.java  LogicForDialogBuyToken.java  UIFamilyNotification.java  UIFamilyQuests.java  UIFamilyRating.java  UIFamilyShop.java  UIFamilyShopKt.java  UIMailLayout.java  UIMenuCarPark.java  UIMenuCarParkKt.java  UIMenuFamilyPlayersSetting.java  UIMenuFamilySetting.java  UIMenuFamilySettingKt.java  UIMenuFamilyStore.java  UIMenuFamilyStoreKt.java  UIMenuFamilyUpgrade.java  UIMenuFamilyUpgradeKt.java  UIMenuMain.java  UIMenuMainKt.java  UITopPresents.java
jni/jni/full_rpc/: full_rpc.inc  все рпс для доработки.txt
jni/jni/game/: ._hooks.cpp  BRNotification.cpp  CActorPed.cpp  CActorPed.h  CAdjustableHudColors.cpp  CAdjustableHudColors.h  CAdjustableHudPosition.cpp  CAdjustableHudPosition.h  CAdjustableHudScale.cpp  CAdjustableHudScale.h  CClothesTextureManager.cpp  CClothesTextureManager.h  CCustomPlateManager.cpp  CCustomPlateManager.h  CExtendedCarColors.cpp  CFileMgr.cpp  CFileMgr.h  CFirstPersonCamera.cpp  CFirstPersonCamera.hpp  CGPS.cpp  CGPS.hpp  CHandlingDefault.cpp  CHandlingDefault.h  CInfoBarText.cpp  CInfoBarText.h  COccluder.cpp  COccluder.h  COcclusion.cpp  COcclusion.h  CPlayerInfoGta.h  CRadar.cpp  CRadar.h  CRadarRect.cpp  CRadarRect.h  CRemoteData.cpp  CRenderTarget.cpp  CRenderTarget.h  CSkyBox.cpp  CSkyBox.h  CSnow.cpp  (+176 more)
jni/jni/game_sa/: CTextureDatabaseRuntime.cpp
jni/jni/graphics/: CInterface.cpp  CInterface.h  CRQ_Commands.cpp  CRQ_Commands.h  CSkyBox.cpp  CSkyBox.h
jni/jni/gtare/: CFileMgr.cpp  CFileMgr.h  CHud.cpp  CHud.h  CRQ_Commands.cpp  CSkyBox.cpp  CSkyBox.h  GTASAInit.cpp  OSDeviceForm.h  Streaming.cpp  Streaming.h  TextureDatabaseRuntime.cpp  TextureDatabaseRuntime.h  constants.h
jni/jni/gtasa/: CWeaponInfo.cpp  CWeaponInfo.h  GTASAInit.cpp  IdleCam.cpp  IdleCam.h
jni/jni/gui/: CBinder.cpp  CBinder.h  CFontInstance.cpp  CFontRenderer.cpp  CHUD.cpp  CHUD.h  ITouchListener.cpp  UIUtils.cpp  UIUtils.h  buttons.cpp  buttons.h  gui.cpp  gui.h  (+13 more)
(+1042 files in other folders)
